--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #ffc75f;
+}
+.App {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  height: 250px;
+  background-color: white;
+  width: 370px;
+  display: flex;
+  flex-direction: column;
+  border: none;
+  margin-top: 150px;
+  border-radius: 4px;
+}
+button:hover{
+  background-color: #845ec2df;
+}
+input{
+  margin-bottom: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  width: 79%;
+  border: 1px solid gainsboro;
+  border-radius: 6px;
+  border-radius: 4px;
+  margin-left: 20px;
+  font-size: 16px;
+}
+input:focus{
+  outline: none;
+}
+h1{
+  margin: 20px 10px 10px 20px;
+  font-family: "Poppins", sans-serif;
+  color: #845ec2;
+}
+p{
+  margin: 0 10px 20px 20px;
+  color: #ffc75f;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+button{
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  margin-left: 20px;
+  margin-top: 10px;
+  width: 85%;
+  border: none;
+  border-radius: 6px;
+  background-color: #845EC2;
   color: white;
+  font-size: 18px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
